--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,39 +29,17 @@ add_subdirectory(sgp4sdp4)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(NCURSES REQUIRED ncurses)
 
-# Locate Hamlib headers and library
-find_path(HAMLIB_INCLUDE_DIR hamlib/rig.h 
-    PATHS 
-    /usr/local/include 
-    /usr/include
-)
-
-find_library(HAMLIB_LIBRARY libhamlib.dylib 
-    PATHS 
-    /usr/local/lib 
-    /usr/lib
-)
-
-# Debugging output
-message(STATUS "Hamlib include dir: ${HAMLIB_INCLUDE_DIR}")
-message(STATUS "Hamlib library: ${HAMLIB_LIBRARY}")
-
-# Check if Hamlib was found
-if (NOT HAMLIB_INCLUDE_DIR OR NOT HAMLIB_LIBRARY)
-    message(FATAL_ERROR "Hamlib not found. Please install Hamlib or specify its location.")
-endif()
-
 # Add the main executable
-add_executable(simple_sat_ops main.c prediction.c)
+add_executable(simple_sat_ops main.c prediction.c radio.c antenna_rotator.c)
+# target_compile_definitions(simple_sat_ops PUBLIC -DQOL)
 
 # Include directories for sgp4sdp4 and Hamlib
 target_include_directories(simple_sat_ops PRIVATE
     ${CMAKE_SOURCE_DIR}/sgp4sdp4
-    ${HAMLIB_INCLUDE_DIR}
 )
 
 # Link the sgp4sdp4 library and Hamlib
-target_link_libraries(simple_sat_ops PRIVATE sgp4sdp4 ${HAMLIB_LIBRARY} ${NCURSES_LIBRARIES} m curl)
+target_link_libraries(simple_sat_ops PRIVATE sgp4sdp4 ${NCURSES_LIBRARIES} m) 
 
 # Next in queue tool
 add_executable(next_in_queue next_in_queue.c prediction.c)
@@ -69,12 +47,13 @@ target_include_directories(next_in_queue PRIVATE
     ${CMAKE_SOURCE_DIR}/sgp4sdp4
     ${HAMLIB_INCLUDE_DIR}
 )
-target_link_libraries(next_in_queue PRIVATE sgp4sdp4 ${HAMLIB_LIBRARY} ${NCURSES_LIBRARIES} m)
+target_link_libraries(next_in_queue PRIVATE sgp4sdp4 ${NCURSES_LIBRARIES} m)
 
 # Lifetime tool
 add_executable(lifetime lifetime.c prediction.c)
 target_include_directories(lifetime PRIVATE
     ${CMAKE_SOURCE_DIR}/sgp4sdp4
-    ${HAMLIB_INCLUDE_DIR}
 )
-target_link_libraries(lifetime PRIVATE sgp4sdp4 ${HAMLIB_LIBRARY} m)
+target_link_libraries(lifetime PRIVATE sgp4sdp4 m)
+
+install(TARGETS simple_sat_ops next_in_queue lifetime DESTINATION $ENV{HOME}/bin)
